A complete rewrite of the executors, using the library.
This just simulated CLI before, which was brittle and broke
with each minor change. There's a new library API now that
ensures things work as expected, and are cleaner.

Also concurrency changes to be multiprocess with a pool.
