# openapi-spec.yml
@@ -1,6 +1,6 @@
 openapi: "3.0.0"
 info:
-  version: 1.0.0
+  version: 0.1.1
   title: xOpera API
   license:
     name: Apache-2.0
@@ -10,7 +10,7 @@ paths:
       summary: Deploy a CSAR
       operationId: deploy
       requestBody:
-        description: Deployment inputs and service template name
+        description: Deployment inputs and service template name.
         required: false
         content:
           application/json:
@@ -68,7 +68,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Invocation"
         "404":
-          description: No invocation with this id.            
+          description: No invocation with this id.
   /outputs:
     get:
       summary: Fetch deployment outputs
@@ -87,7 +87,7 @@ paths:
       summary: Validate a CSAR
       operationId: validate
       requestBody:
-        description: Validation inputs and service template name
+        description: Validation inputs and service template name.
         required: false
         content:
           application/json:
@@ -118,39 +118,35 @@ components:
       description: Free-form mapping of outputs.
       type: object
     Invocation:
-      description: An invocation of the deployment
+      description: An invocation of the deployment.
       type: object
       required:
         - id
         - state
         - timestamp
-        - console_output
       properties:
         id:
           type: string
         state:
           $ref: "#/components/schemas/InvocationState"
         operation:
-          type: string
-          enum:
-            - deploy
-            - undeploy
+          type: OperationType
         timestamp:
           description: An ISO8601 timestamp of the invocation.
           type: string
         inputs:
-          description: Inputs provided for invocation
+          description: Inputs provided for invocation.
           type: object
         instance_state:
-          description: State of the instances defined in service template
+          description: State of the instances defined in service template.
           type: object
           additionalProperties:
-            type: string        
+            type: string
         exception:
-          description: An internal xOpera error that occurred starting operation
+          description: An internal xOpera error that occurred starting operation.
           type: string
         console_output:
-          description: xOpera console output for operation
+          description: xOpera console output for operation.
           type: string
     InvocationHistory:
       description: Invocation history ordered by timestamp ascending.
@@ -170,6 +166,12 @@ components:
     InvocationState:
       type: string
       enum:
+        - pending
+        - in_progress
         - success
         - failed
-        - in_progress         
+    OperationType:
+      type: string
+      enum:
+        - deploy
+        - undeploy
